2020-02-18  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-95, GIT revision 15...

2020-02-18  6.9.10-95 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.

2020-02-16  6.9.10-94 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-94, GIT revision 15405:56d9955fc:20200217

2020-02-16  6.9.10-94 Cristy  <quetzlzacatenango@image...>
  * Corrected ellipse orientation when computing image moments.

2020-02-14  6.9.10-93 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-93, GIT revision 15386:2d96228:20200214

2020-02-08  6.9.10-93 Cristy  <quetzlzacatenango@image...>
  * Report gray(127.5) as gray(50%).

2020-02-07  6.9.10-92 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-92, GIT revision 15374:d468797:20200207

2020-02-03  6.9.10-92 Cristy  <quetzlzacatenango@image...>
  * More work on connect components, e.g. keep-colors, remove-colors,
    keep-topids 
  * Initialize mutex before locking if its not already initialized
  * Support 24-bit TIFF images.

2020-02-01  6.9.10-91 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-91, GIT revision 15346:4691fe1:20200201.

2020-01-27  6.9.10-91 Cristy  <quetzlzacatenango@image...>
  * Support additional connected component defines.
  * Refresh cache morphology when writing MPC images.

2020-01-26  6.9.10-89 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-89, GIT revision 15318:2b12203:20200126

2020-01-26  6.9.10-89 Cristy  <quetzlzacatenango@image...>
  * Make png creation reproducible (reference
    https://github.com/ImageMagick/ImageMagick/pull/1270).
  * Refactor uninitialize variable for -fx "while(,)" expression.

2020-01-25  6.9.10-88 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-88, GIT revision 15309:a3d1b6f:20200125
