@@ -3,6 +3,7 @@
 
 2020-02-18  6.9.10-95 Cristy  <quetzlzacatenango@image...>
   * Adapt to a change in command-line options in the SVG inkscape delegate.
+  * No percent sign in lab() color.
 
 2020-02-16  6.9.10-94 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.10-94, GIT revision 15405:56d9955fc:20200217
